# IdGenerator

./: .gitignore  LICENSE  README.en.md  README.md  auto_commit.bat  auto_download.bat
C/: .gitignore  README.md
C#/: README.md
C#.NET/: README.md
C#.NET/source/: .dccache  Yitter.IdGen.sln
C#.NET/source/YitIdGen.WinFormApp/: Program.cs  StartForm.Designer.cs  StartForm.cs  YitIdGen.WinFormApp.csproj
C#.NET/source/Yitter.IdGenTest/: GenTest.cs  Program.cs  Yitter.IdGenTest.csproj
C#.NET/source/Yitter.IdGenerator/: DefaultIdGenerator.cs  YitIdHelper.cs  Yitter.IdGenerator.csproj
C#/source/: Yitter.IdGen.sln
C#/source/Yitter.IdGenTest/: GenTest.cs  Program.cs  Yitter.IdGenTest.csproj
C#/source/Yitter.IdGenerator/: DefaultIdGenerator.cs  IdHelper.cs  Yitter.IdGenerator.csproj
C(Linux)/: README.md
C++/: README.md
C++/source/: main.cpp
C++/source/idgen/: IdGenerator.h
C/source/: .gitignore  CMakeLists.txt  YitIdHelper.c  YitIdHelper.h  main.c
C/source/idgen/: CMakeLists.txt  IdGenOptions.c  IdGenOptions.h  IdGenerator.c  IdGenerator.h  SnowWorkerM1.c  SnowWorkerM1.h  SnowWorkerM2.c  SnowWorkerM2.h  YitIdHelper.c  YitIdHelper.h  common.h
CPP/: README.md
D/: .gitignore
Delphi/: README.md
Delphi/source/: .gitignore  BakClear.bat  IdGenTest.dpr  IdGenTest.dproj  IdGenTest.res  uDefaultIdGenerator.pas  uTest.dfm  uTest.pas  uYitIdHelper.pas
FFI for Python-Node-PHP/: README.md
FFI for Python-Node-PHP/lib/: yitidgen-linux-x64.7z  yitidgen-win-x64.7z
Go/: README.md
Go/regworkerid/: go.sum  main.go  reg.go
Go/source/: .dccache  .gitignore  go.mod  go.sum  main.go  reg.go
Java/: README.md
Java/source/: .dccache  .gitignore  pom.xml
JavaScript/: .gitignore  README.md  index.js  package.json
JavaScript/test/: test2.js
Node.js/: README.md  index.js
Node.js/test/: process_test.js  test2.js
NodeJs/: README.md  config.js  genid.js  index.js  package-lock.json  package.json  test.js
NodeJs/test/: process_test.js  test.js
OtherLanguages/: README.md
PHP/: .gitignore  .travis.yml  CREDITS  README.md  config.m4  config.w32  php_snowdrift.h  snowdrift.c  snowdrift.php  split.php
PHP/src/: makefile  test.c
PHP/tests/: 001.phpt  002.phpt  003.phpt  004.phpt
PHP/travis/: compile.sh  run-tests.sh
Python/: README.md  test.py
Python/source/: Generator.py  IdGeneratorOptions.py  Options.py  SnowFlake.py  SnowFlakeM1.py  SnowFlake_.py  generator.py  idregister.py  options.py  snowflake.py  snowflake_m1.py
Python/soure/: DefaultIdGenerator.py
Rust/: README.md
Rust/source/: .gitignore  Cargo.toml  README.md  build-release.bat
Rust/source/src/: lib.rs  main.rs
Rust/source/src/idgen/: default_id_generator.rs  i_snow_worker.rs  id_generator_options.rs  mod.rs  over_cost_action_arg.rs  snow_worker_m1.rs  snow_worker_m2.rs  yit_id_helper.rs
Rust/source/src/yitgen/: mod.rs
Rust/source/src/yitgen/contract/: i_snow_worker.rs  id_generator_options.rs  mod.rs  over_cost_action_arg.rs
Rust/source/src/yitgen/core/: mod.rs  snow_worker_m1.rs  snow_worker_m2.rs
SQL/: README.md  sqlserver.sql
Tools/AutoRegisterWorkerId/: README.md
Tools/FFI for Python-Node-PHP/: README.md
TypeScript/: .gitignore  README.md  package-lock.json  package.json  snowflakeIdv1.ts  snowflakeIdv1Option.ts  tsconfig.json
TypeScript/test/: test1.ts  test2.ts  test3.ts  test4.ts  test5.ts
Vlang/: README.md
ZeOthers/: README.md
ZeOthers/D/: dub.json
ZeOthers/Vlang/: README.md
src/: Yitter.IdGenerator.sln
src/Yitter.IdGenTest/: GenTest.cs  Program.cs
src/Yitter.IdGenerator/: IIdGenerator.cs  ISnowWorker.cs  IdGeneratorOptions.cs  OverCostActionArg.cs  SnowWorkerM1.cs  SnowWorkerM2.cs  YidGenerator.cs  YidHelper.cs  YitIdGenerator.cs  Yitter.IdGenerator.csproj
zzz (Other Languages)/: README.md
zzz (Other Languages)/D/: README.md
zzz-OtherLanguages/: README.md
zzz-OtherLanguages/D/: README.md
zzz-OtherLanguages/V/: README.md
(+125 files in other folders)
