[package]
name = "yitidgen"
version = "1.0.0"
authors = ["yitter <yitter@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
lazy_static = "1.4.0"
#simple_redis = "*"
redis = "0.20.0"
libc="*"

#actix = "0.9.0"
#actix-web = "2.0"
#actix-rt = "1.0"
#actix-redis = "0.8.0"
#redis-async = "0.6.1"

[lib]
name = "yitidgen"
path = "./src/lib.rs"
crate-type = ["cdylib"]
