[package]
name = "yiter-idgenerator"
version = "1.0.0"
authors = ["yitter <yitter@126.com>"]
edition = "2018"
license = "MIT"
description="Shorter ID and faster generation with a new snowflake drift algorithm. The core is to shorten the ID length, but also can have a very high instantaneous concurrent processing capacity (50W/0.1s), and powerful configuration capacity."
readme = "README.md"
homepage ="https://github.com/yitter/IdGenerator"
repository = "https://github.com/yitter/IdGenerator"
keywords = ["snowflake", "idgenerator"]
#categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
lazy_static = "1.4.0"
#simple_redis = "*"
redis = "0.20.0"
libc = "*"

#actix = "0.9.0"
#actix-web = "2.0"
#actix-rt = "1.0"
#actix-redis = "0.8.0"
#redis-async = "0.6.1"

[lib]
name = "yitidgen"
path = "./src/lib.rs"
crate-type = ["cdylib"]
