[package]
name = "yitter_idgen"
version = "1.0.0"
authors = ["yitter <yitter@126.com>"]
edition = "2018"
license = "MIT"
description="Shorter ID and faster generation with a new snowflake drift algorithm. The core is to shorten the ID length, but also can have a very high instantaneous concurrent processing capacity (50W/0.1s), and powerful configuration capacity."
readme = "README.md"
homepage ="https://github.com/yitter/IdGenerator"
repository = "https://github.com/yitter/IdGenerator"
keywords = ["snowflake", "idgenerator"]
#categories = ["command-line-utilities"]

[dependencies]
libc = "*"
chrono = "0.4.10"
#lazy_static = "1.4.0"

[lib]
name = "yitter_idgen"
path = "./src/lib.rs"
crate-type = ["cdylib"]
